...
        <Button
          variant="filled"
          onPress={() => {
            navigation.navigate('TabContacts', { count: i++ });
          }}
        >
          Go to Contacts
        </Button>
        <Button variant="tinted" onPress={() => navigation.goBack()}>
          Go back
        </Button>
      </View>
      <Article />
...
