appId: ${APP_ID}
name: Stack - Basic
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: stack-basic
      TEXT: 'Article by Gandalf'
- tapOn:
    text: 'Update params'
- assertVisible:
    text: 'Article by Babel fish'
- tapOn:
    text: 'Navigate to feed'
- assertVisible:
    text: 'Feed'
- tapOn:
    text: 'Replace with contacts'
- assertVisible:
    text: 'Contacts'
- tapOn:
    text: 'Push albums'
- assertVisible:
    text: 'Albums'
- tapOn:
    text: 'Push article'
- assertVisible:
    text: 'Article by Babel fish'
- tapOn:
    text: 'Pop to albums'
- assertVisible:
    text: 'Albums'
- tapOn:
    text: 'Pop by 2'
- assertVisible:
    text: 'Article by Babel fish'
